# wasm-demo

./: .gitignore  flake.nix
go-hello/: go.mod  main.go
go-hello/internal/component/hello/greeter/: greeter.exports.go  greeter.wasm.go  greeter.wit.go
go-hello/internal/component/hello/greeter-world/: greeter-world.wit.go
go-hello/internal/wasi/filesystem/types/: abi.go  types.wit.go
go-hello/internal/wasi/io/streams/: streams.wit.go
go-hello/internal/wasi/sockets/tcp/: abi.go  tcp.wit.go
go-hello/internal/wasi/sockets/udp/: abi.go  udp.wit.go
moonbit-hello/: moon.mod.json
moonbit-hello/ffi/: top.mbt
moonbit-hello/interface/component/hello/greeter/: ffi.mbt  moon.pkg.json  top.mbt
moonbit-hello/wit/: greeter.wit
moonbit-hello/world/greeterWorld/: top.mbt
nix/: wac.nix  wit-deps.nix
rust-handler/: Cargo.toml  linking.wac
rust-handler/src/: lib.rs
rust-hello/: Cargo.toml
rust-hello/src/: bindings.rs  lib.rs
wit/: deps.toml  greeter-go.wit  greeter.wit  handler.wit
